--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,28 @@
+@PHDTHESIS{2001PhDT........21S,
+   author = {{Stadel}, J.~G.},
+    title = "{Cosmological N-body simulations and their analysis}",
+   school = {UNIVERSITY OF WASHINGTON},
+     year = 2001,
+   adsurl = {http://adsabs.harvard.edu/abs/2001PhDT........21S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008Natur.454..735D,
+   author = {{Diemand}, J. and {Kuhlen}, M. and {Madau}, P. and {Zemp}, M. and 
+	{Moore}, B. and {Potter}, D. and {Stadel}, J.},
+    title = "{Clumps and streams in the local dark matter distribution}",
+  journal = {\nat},
+archivePrefix = "arXiv",
+   eprint = {0805.1244},
+     year = 2008,
+    month = aug,
+   volume = 454,
+    pages = {735-738},
+      doi = {10.1038/nature07153},
+   adsurl = {http://adsabs.harvard.edu/abs/2008Natur.454..735D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Klypin2016,
    author = {{Klypin}, A. and {Yepes}, G. and {Gottl{\"o}ber}, S. and {Prada}, F. and 
 	{He{\ss}}, S.},
