rewriting the conclusions

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -587,34 +587,33 @@ reach a plateau in the halo mass range $10^{10}< M_{h}/\hMsun <
 \section{Conclusions}
 \label{sec:conclusions}
 
-In this paper we used bootstrapping on dark matter halos resolved with a
-large number of particles ($\sim 10^5$) in order to quantify biases on
-concentration estimates. 
+In this paper we quantified biases on concentration numerical estimates by
+bootstrapping dark matter halos resolved with a  large number of
+particles ($\sim 10^5$).
 We found that methods commonly used in the literature present a large
 bias in the concentration by overestimating it by factors of
-$15\%-20\%$ for halos with $200$ particles. 
-The scaling of the bias as a function of particle number was found in
+$15\%$-$20\%$ for halos with $200$ particles, or $6\%$-$8\%$ for halos
+with $500$ particles. 
+This procedure is a new way to quantify the bias in concentration
+estimates.
+
+The scaling of the bias as a function of particle number was found using
 two very different kinds of simulations, one cosmological and the
-other of an individual high resolution halo, suggesting its universal
-nature. 
+other of an individual high resolution halo.
 
-This provided a motivation to introduce a new method to estimate the
-concentration that shows a lower bias.
-The method is based on the integrated mass profile. 
-We also implemented a fitting procedure based on a Markov Chain Monte Carlo
-algorithm.
+This results motivated the introduction of a new method to estimate the
+concentration with a lower bias at low particle numbers.
+The method we presented is based on the integrated mass profile. 
+To show its performance on simulation data Ww also implemented a
+fitting procedure based on a Markov Chain Monte Carlo algorithm.
 In the bootstrapping experiment this method showed a bias on the order
-of $2\%-3\%$ for halos with $200$ particles. 
+of $2\%-3\%$ for halos with $200$ particles and less than $1\%$ for
+halos with $500$ particles or more. 
 
-
-
-
-We provide for the first time in the literature a direct way to
-measure the bias in the estimated halo concentration at low particle numbers and
-a way to use it to make corrections on the estimates. 
 
 We also used the N-body simulation to estimate the impact on the mass
-concentration relationship.  
+concentration relationship of the new method to estimate
+concentration.   
 Although the three methods are in broad agreement within their
 uncertainties there are some noticeable differences.  
 The first difference is that the density method produces
